--- a/package.json
+++ b/package.json
@@ -16,18 +16,18 @@
   "devDependencies": {
     "@playwright/test": "^1.21.0",
     "@sveltejs/adapter-auto": "next",
-    "@sveltejs/adapter-static": "^1.0.0-next.29",
+    "@sveltejs/adapter-node": "^1.0.0-next.73",
     "@sveltejs/kit": "next",
+    "@types/better-sqlite3": "^7.5.0",
     "@typescript-eslint/eslint-plugin": "^5.10.1",
     "@typescript-eslint/parser": "^5.10.1",
     "assert": "^2.0.0",
+    "better-sqlite3": "^7.5.1",
     "eslint": "^8.12.0",
     "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-svelte3": "^4.0.0",
     "prettier": "^2.5.1",
     "prettier-plugin-svelte": "^2.5.0",
-    "sqlite": "^4.1.1",
-    "sqlite3": "^5.0.8",
     "svelte": "^3.44.0",
     "svelte-check": "^2.2.6",
     "svelte-modals": "^1.1.0",
