--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "prettier-plugin-svelte": "^2.5.0",
     "svelte": "^3.44.0",
     "svelte-check": "^2.2.6",
+    "svelte-i18n": "^3.4.0",
     "svelte-modals": "^1.1.0",
     "svelte-octicons": "^17.4.0",
     "svelte-preprocess": "^4.10.1",
